<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.divination.DayCardInputFragment">
    <!--tools:background="@drawable/background"-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="24dp"
        android:text="@string/day_card"
        android:textAppearance="@style/Custom.TextAppearanceHeadline"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:text="@string/your_choice"
        android:textAppearance="@style/Custom.TextAppearanceHeadline1"
        android:gravity="center"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/write_num_0_9"
        android:padding="12dp"
        app:endIconMode="clear_text"
        app:counterEnabled="true"
        app:counterMaxLength="1"
        app:errorEnabled="true"
        app:helperTextEnabled="true"
        app:helperText="@string/num_influence"
        app:startIconDrawable="@drawable/ic_create"
        style="@style/Custom.TextInput">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:fontFamily="@font/elmessiri_semibold"/>

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>