<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:background="@drawable/background"
    tools:context=".view.cards.CardsFragment">

    <SearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/custom_linear_layout_bg_shape"
        android:iconifiedByDefault="false"
        android:searchIcon="@drawable/ic_search"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:queryHint="Введите название карты"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <CheckBox
        android:id="@+id/cb_major_arcana"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/major_arcana"
        app:layout_constraintEnd_toStartOf="@+id/cb_pentacles"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_view"/>

    <CheckBox
        android:id="@+id/cb_wands"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/wands"
        app:layout_constraintStart_toStartOf="@id/cb_major_arcana"
        app:layout_constraintTop_toBottomOf="@id/cb_major_arcana"/>

    <CheckBox
        android:id="@+id/cb_cups"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/cups"
        app:layout_constraintStart_toEndOf="@+id/cb_wands"
        app:layout_constraintTop_toBottomOf="@id/cb_major_arcana"
        app:layout_constraintEnd_toStartOf="@+id/cb_swords"
        tools:checked="false"/>

    <CheckBox
        android:id="@+id/cb_swords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/swords"
        android:checked="true"
        app:layout_constraintTop_toBottomOf="@id/cb_major_arcana"
        app:layout_constraintEnd_toEndOf="@id/cb_pentacles"/>

    <CheckBox
        android:id="@+id/cb_pentacles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/pentacles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cb_major_arcana"
        app:layout_constraintTop_toBottomOf="@id/search_view"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_cards"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cb_wands"
        tools:listitem="@layout/list_item_cards" />

</androidx.constraintlayout.widget.ConstraintLayout>